--- a/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
+++ b/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Coordinates\CubeHexCoordinate.cs" />
     <Compile Include="Days\Day01A.cs" />
     <Compile Include="Days\Day01B.cs" />
+    <Compile Include="DoublyLinkedNode.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="Extensions\MatrixExtensions.cs" />
