--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       uses: warrenbuckley/Setup-MSBuild@v1
       
     - name: MSBuild
-      working-directory: src
+      working-directory: ./
       run: AdventOfCode2018.sln
